[project]
name = "3d-aruco-generator"
requires-python = ">=3.11"
version = "1.0.0"
authors = [
    { name = "Ignacio Montesino Valle", email = "monte.igna@gmail.com" }
]
dependencies = [
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pixi.project]
name = "3D-aruco-generator"
channels = ["conda-forge"]
platforms = ["linux-64"]

[tool.pixi.tasks]
make_aruco = {cmd="python generate_aruco.py"}

[tool.pixi.dependencies]
numpy = ">=1.26.4,<2"
opencv = ">=4.10.0,<5"
cadquery = ">=2.4.0,<3"
ocp = ">=7.7.2.1,<8"
